[project]
name = "mcp-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "emoji>=2.14.1",
    "fastmcp>=2.11.2",
    "markdownify>=1.1.0",
    "mcp>=1.12.4",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "readabilipy>=0.3.0",
    "torch>=2.8.0",
    "transformers>=4.55.0",
]
